[build-system]
requires = ["setuptools", "setuptools-scm==7.1.0", "pytest-runner"]
build-backend = "setuptools.build_meta"

[project]
name = "python_moztelemetry"
authors = [
    {name = "Roberto Agostino Vitillo", email = "rvitillo@mozilla.com"},
]
maintainers = [
  {name = "Krzysztof Ignasiak", email = "kik@mozilla.com"}
]
description = "Spark bindings for Mozilla Telemetry"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "Mozilla Public License Version 2.0"}
dependencies = [
    "boto",
    "boto3",
    "ujson",
    "requests",
    "protobuf>=3.6.0",
    "six",
    "expiringdict",
    "functools32;python_version<'3'",
    "py4j",
    "pandas>=0.19.2",
    "numpy>=1.8.2",
    "PyYAML",
    "python-snappy"
]

[project.optional-dependencies]
tests_require = [
    "mock",
    "pytest-timeout",
    "moto",
    "responses",
    "scipy",
    "pyspark",
    "pytest",
    "pytest-co"
]

[project.urls]
repository = "https://github.com/mozilla/python_moztelemetry"

[tool.setuptools]
packages = ["moztelemetry"]
